syntax = "proto3";

import "fit_any.proto";
package com.huawei.fit.registry;

option optimize_for = LITE_RUNTIME;


message CodedData {
  int32 code = 1;
  string message = 2;
  com.huawei.fitframework.broker.serialization.FitAny data = 3;
}

message CodedData2 {
  int32 code = 1;
  string message = 2;
  repeated com.huawei.fitframework.broker.serialization.FitAny data = 3;
}

message CodedData3 {
  int32 code = 1;
  string message = 2;
  map<string,com.huawei.fitframework.broker.serialization.FitAny> data = 3;
}

message Person {
  string name = 1;
  int32 age = 2;
  repeated string nickNames = 3;
  map<string, string> addresses = 4;
}

message EncapsulatedData {
  int32 name = 1;
  CodedData codedData = 2;
}

message EncapsulatedData2 {
  int32 name = 1;
  CodedData codedData = 2;
}
